[SchoolBoard] Adjustments to addProfessor due to lack of security [Game] solved toList() missing [SchoolBoardTest] Added some tests